# qq-game-robot

./: .env.example  README.md  docker-compose.yml  pyproject.toml  setup.py
app/: cache.py  config.py  database.py  exceptions.py  main.py  models.py  qq_adapter.py  scheduler.py  schemas.py
app/clients/: qq_api.py  steam_client.py  xhh_spider.py
app/repository/: game_repository.py
app/services/: game_service.py  nlp_recommendation.py
tests/: conftest.py  test_game_service_and_adapter.py  test_steam_client.py  test_xhh_spider.py
